# nbvplanner

./: .gitmodules  README.md
interface_nbvp_firefly/: CMakeLists.txt  package.xml
interface_nbvp_firefly/launch/: nbvplanner.launch  record.launch
interface_nbvp_firefly/resource/: exploration.yaml
interface_nbvp_neo/: CMakeLists.txt  package.xml
interface_nbvp_neo/launch/: exploration.launch  export.launch  inspection.launch  record.launch
interface_nbvp_neo/mesh/: structure.stl
interface_nbvp_neo/resource/: exploration.yaml  inspection.yaml
interface_nbvp_neo/src/: interface.cpp
interface_nbvp_rotors/: CMakeLists.txt  package.xml
interface_nbvp_rotors/launch/: area_exploration.launch  flat_exploration.launch  mav_inspector.launch  multiagent_area_exploration.launch  multiagent_flat_exploration.launch
interface_nbvp_rotors/mesh/: meshFlat.stl
interface_nbvp_rotors/resource/: area_exploration.yaml  exploration.yaml
interface_nbvp_rotors/src/: exploration.cpp
interface_nbvp_rotors/worlds/: flat.world
kdtree/: CMakeLists.txt  package.xml
multiagent_collision_check/: CMakeLists.txt  package.xml
multiagent_collision_check/include/multiagent_collision_check/: multiagent_collision_checker.h
multiagent_collision_check/msg/: Segment.msg
multiagent_collision_check/src/: multiagent_collision_checker.cpp
nbvPlanner/: CMakeLists.txt  package.xml
nbvPlanner/include/nbvPlanner/: nbvp.h  nbvp.hpp
nbvPlanner/launch/: firefly_exploration.launch
nbvPlanner/src/: exploration.cpp  nbvp.cpp  plan.cpp
nbvPlanner/srv/: nbvp_srv.srv
nbvplanner/: CMakeLists.txt  package.xml
nbvplanner/include/nbvPlanner/: nbvp.h  nbvp.hpp
nbvplanner/include/nbvplanner/: mesh_base.h  mesh_structure.h  nbvp.h  nbvp.hpp  rrt.h  tree.h  tree.hpp  voxblox_map_manager.h
nbvplanner/launch/: coopertive_firefly_history_exploration.launch  firefly_baseline_exploration.launch  firefly_exploration.launch  firefly_history_exploration.launch  firefly_probabilistic_exploration.launch  firefly_vicon_history_exploration.launch  flat.launch  mav_inspector.launch
nbvplanner/resource/: baseline.yaml  exploration.yaml  history.yaml  param.yaml  probabilistic.yaml
nbvplanner/src/: exploration.cpp  mesh_base.cpp  mesh_structure.cpp  nbv_planner_node.cpp  nbvp.cpp  plan.cpp  rrt.cpp  tree.cpp  voxblox_map_manager.cpp  wpFollower.cpp
nbvplanner/srv/: nbvp_srv.srv
nbvplanner/urdf/: firefly_1.xacro  firefly_1_base.xacro  firefly_2.xacro  firefly_2_base.xacro  firefly_3.xacro  firefly_3_base.xacro  firefly_4.xacro  firefly_4_base.xacro  firefly_5.xacro  firefly_5_base.xacro  firefly_generic_odometry_sensor_1.gazebo  firefly_generic_odometry_sensor_2.gazebo  firefly_generic_odometry_sensor_3.gazebo  firefly_generic_odometry_sensor_4.gazebo  firefly_generic_odometry_sensor_5.gazebo  firefly_vi_sensor_1.gazebo  firefly_vi_sensor_2.gazebo  firefly_vi_sensor_3.gazebo  firefly_vi_sensor_4.gazebo  firefly_vi_sensor_5.gazebo
nbvplanner/worlds/: powerplant_capped.world  test_scenario.world
octomap_to_mesh/: CMakeLists.txt  README.md  package.xml
octomap_to_mesh/include/octomap_to_mesh/: OctomapToGrid.h  OctomapToMesh.h  OctomapToMesh_data.h  OctomapToMesh_emxAPI.h  OctomapToMesh_emxutil.h  OctomapToMesh_initialize.h  OctomapToMesh_rtwutil.h  OctomapToMesh_struct.h  OctomapToMesh_terminate.h  OctomapToMesh_types.h  cat.h  circshift.h  fclose.h  fileManager.h  fopen.h  fprintf.h  ind2sub.h  retrieve_meshformat.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  sortrows.h  sum.h  unique.h  write_stl.h
octomap_to_mesh/launch/: octomapToMesh.launch
octomap_to_mesh/src/: OctomapToGrid.cpp  OctomapToMesh.cpp  OctomapToMesh_data.cpp  OctomapToMesh_emxAPI.cpp  OctomapToMesh_emxutil.cpp  OctomapToMesh_initialize.cpp  OctomapToMesh_node.cpp  OctomapToMesh_rtwutil.cpp  OctomapToMesh_terminate.cpp  cat.cpp  circshift.cpp  fclose.cpp  fileManager.cpp  fopen.cpp  fprintf.cpp  ind2sub.cpp  retrieve_meshformat.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  sortrows.cpp  sum.cpp  unique.cpp  write_stl.cpp
prune_pointcloud/: CMakeLists.txt  package.xml
prune_pointcloud/include/prune_pointcloud/: prune.h
prune_pointcloud/launch/: prune_pointcloud.launch
prune_pointcloud/src/: prune.cc  prune_node.cc
