<?xml version="1.0"?>
<package>
  <name>interface_nbvp_firefly</name>
  <version>0.0.0</version>
  <description>The package to interface the nbvplanner with the firefly robot</description>
  
  <maintainer email="andreas.bircher@mavt.ethz.ch">andreasbircher</maintainer>

  <license>GPLv3</license>

  <author email="andreas.bircher@mavt.ethz.ch">andreasbircher</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
