<?xml version="1.0"?>
<package>
  <name>interface_nbvp_neo</name>
  <version>0.0.0</version>
  <description>The package to interface the nbvplanner with the neo robot</description>
  
  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>ASL 2.0</license>

  <author>Andreas Bircher</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nbvplanner</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  
  <run_depend>nbvplanner</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>
</package>
