<?xml version="1.0"?>
<package>
  <name>interface_nbvp_rotors</name>
  <version>0.0.0</version>
  <description>The package that interfaces the nbvplanner with rotors</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">andreasbircher</maintainer>

  <license>TBD</license>

  <author email="andreas.bircher@mavt.ethz.ch">andreasbircher</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nbvplanner</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>nbvplanner</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
