<?xml version="1.0"?>
<package format="2">
  <name>kdtree</name>
  <version>0.0.0</version>
  <description>
      kdtree functionality
  </description>
  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
