<?xml version="1.0"?>
<package>
  <name>nbvplanner</name>
  <version>0.0.0</version>
  <description>The nbvplanner package</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">andreasbircher</maintainer>

  <license>GPLv3</license>

  <author email="andreas.bircher@mavt.ethz.ch">andreasbircher</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rotors_gazebo</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>rotors_gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>planning_msgs</build_depend>
  <build_depend>octomap_to_mesh</build_depend>
  <build_depend>octomap_world</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>rotors_gazebo_plugins</run_depend>
  <run_depend>rotors_gazebo</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>planning_msgs</run_depend>
  <run_depend>octomap_to_mesh</run_depend>
  <run_depend>octomap_world</run_depend>

  <export>

  </export>
</package>
