<?xml version="1.0"?>
<package format="2">
  <name>octomap_to_mesh</name>
  <version>0.0.1</version>
  <description>
      A wrapper for OctomapToMesh, exported from MATLAB.
  </description>
  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>

</package>
