<?xml version="1.0"?>
<package>
  <name>prune_pointcloud</name>
  <version>0.0.0</version>
  <description>The prune_pointcloud package</description>
  
  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>
  
  <license>ASL 2.0</license>
  
  <author>Andreas Bircher</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
